--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1 class="title">Quiz App</h1>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
