--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main></main>
     <footer>
-      <a href="index.html">
+      <a href="index.html" target="_self">
         <svg
           class="home-button"
           viewBox="0 0 106 98"
@@ -33,8 +33,8 @@
           />
         </svg>
       </a>
-      <a href="bookmarks.html"
-        ><svg
+      <a href="bookmarks.html" target="_self">
+        <svg
           class="bookmark-button"
           viewBox="0 0 106 142"
           fill="currentColor"
@@ -48,7 +48,7 @@
           />
         </svg>
       </a>
-      <a href="profile.html">
+      <a href="profile.html" target="_self">
         <svg
           class="profile-button"
           viewBox="0 0 106 106"
