add question cards and styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,85 @@
     <header>
       <h1 class="title">Quiz App</h1>
     </header>
-    <main></main>
+    <main>
+      <section class="question-card">
+        <svg
+          class="question-bookmark"
+          viewBox="0 0 13 14"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M7.18702 9.82254L10.2284 12.6978C10.5676 13.0184 11.1269 12.8008 11.1602 12.3352C11.3861 9.17182 11.3957 5.99941 11.2079 2.83556C11.1463 1.79721 10.2769 1 9.2367 1H3.76338C2.72321 1 1.85374 1.79721 1.79213 2.83556C1.60443 5.99941 1.61396 9.17182 1.83992 12.3352C1.87317 12.8008 2.43253 13.0184 2.7717 12.6978L5.81306 9.82253C6.19855 9.4581 6.80153 9.4581 7.18702 9.82254Z"
+            fill="currentColor"
+            stroke="currentColor"
+            stroke-width="1.5"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+
+        <p class="question">
+          Wie viele Spieler stehen bei einem Basketball Siel pro Team auf dem Feld
+        </p>
+        <button type="button" class="answer-button">Show Anwser</button>
+        <p class="answer">5</p>
+      </section>
+      <section class="question-card">
+        <svg
+          class="question-bookmark"
+          viewBox="0 0 106 142"
+          fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M0 17.6498C0 12.9687 1.85952 8.47947 5.16949 5.16949C8.47946 1.85952 12.9687 0 17.6498 0L88.2488 0C92.9298 0 97.4191 1.85952 100.729 5.16949C104.039 8.47947 105.899 12.9687 105.899 17.6498V136.786C105.898 137.584 105.681 138.367 105.271 139.051C104.861 139.736 104.272 140.297 103.569 140.673C102.865 141.05 102.072 141.229 101.275 141.191C100.478 141.153 99.7061 140.899 99.0416 140.457L52.9493 115.615L6.85693 140.457C6.19246 140.899 5.42051 141.153 4.62328 141.191C3.82605 141.229 3.0334 141.05 2.32976 140.673C1.62612 140.297 1.03784 139.736 0.627573 139.051C0.217304 138.367 0.000412302 137.584 0 136.786V17.6498ZM17.6498 8.82488C15.3093 8.82488 13.0646 9.75464 11.4096 11.4096C9.75464 13.0646 8.82488 15.3093 8.82488 17.6498V128.543L50.5048 106.64C51.2289 106.158 52.0794 105.901 52.9493 105.901C53.8191 105.901 54.6696 106.158 55.3938 106.64L97.0737 128.543V17.6498C97.0737 15.3093 96.1439 13.0646 94.4889 11.4096C92.8339 9.75464 90.5893 8.82488 88.2488 8.82488H17.6498Z"
+            fill="currentColor"
+          />
+        </svg>
+        <p class="question">Kann ein Basketball Spiel unentschieden ausgehen?</p>
+        <button type="button" class="answer-button">Show Anwser</button>
+        <p class="answer">Nein</p>
+      </section>
+      <section class="question-card">
+        <svg
+          class="question-bookmark"
+          viewBox="0 0 106 142"
+          fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M0 17.6498C0 12.9687 1.85952 8.47947 5.16949 5.16949C8.47946 1.85952 12.9687 0 17.6498 0L88.2488 0C92.9298 0 97.4191 1.85952 100.729 5.16949C104.039 8.47947 105.899 12.9687 105.899 17.6498V136.786C105.898 137.584 105.681 138.367 105.271 139.051C104.861 139.736 104.272 140.297 103.569 140.673C102.865 141.05 102.072 141.229 101.275 141.191C100.478 141.153 99.7061 140.899 99.0416 140.457L52.9493 115.615L6.85693 140.457C6.19246 140.899 5.42051 141.153 4.62328 141.191C3.82605 141.229 3.0334 141.05 2.32976 140.673C1.62612 140.297 1.03784 139.736 0.627573 139.051C0.217304 138.367 0.000412302 137.584 0 136.786V17.6498ZM17.6498 8.82488C15.3093 8.82488 13.0646 9.75464 11.4096 11.4096C9.75464 13.0646 8.82488 15.3093 8.82488 17.6498V128.543L50.5048 106.64C51.2289 106.158 52.0794 105.901 52.9493 105.901C53.8191 105.901 54.6696 106.158 55.3938 106.64L97.0737 128.543V17.6498C97.0737 15.3093 96.1439 13.0646 94.4889 11.4096C92.8339 9.75464 90.5893 8.82488 88.2488 8.82488H17.6498Z"
+            fill="currentColor"
+          />
+        </svg>
+        <p class="question">Wieviele Punkte gibt ein Freiwurf</p>
+        <button type="button" class="answer-button">Show Anwser</button>
+        <p class="answer">1</p>
+      </section>
+      <section class="question-card">
+        <svg
+          class="question-bookmark"
+          viewBox="0 0 106 142"
+          fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M0 17.6498C0 12.9687 1.85952 8.47947 5.16949 5.16949C8.47946 1.85952 12.9687 0 17.6498 0L88.2488 0C92.9298 0 97.4191 1.85952 100.729 5.16949C104.039 8.47947 105.899 12.9687 105.899 17.6498V136.786C105.898 137.584 105.681 138.367 105.271 139.051C104.861 139.736 104.272 140.297 103.569 140.673C102.865 141.05 102.072 141.229 101.275 141.191C100.478 141.153 99.7061 140.899 99.0416 140.457L52.9493 115.615L6.85693 140.457C6.19246 140.899 5.42051 141.153 4.62328 141.191C3.82605 141.229 3.0334 141.05 2.32976 140.673C1.62612 140.297 1.03784 139.736 0.627573 139.051C0.217304 138.367 0.000412302 137.584 0 136.786V17.6498ZM17.6498 8.82488C15.3093 8.82488 13.0646 9.75464 11.4096 11.4096C9.75464 13.0646 8.82488 15.3093 8.82488 17.6498V128.543L50.5048 106.64C51.2289 106.158 52.0794 105.901 52.9493 105.901C53.8191 105.901 54.6696 106.158 55.3938 106.64L97.0737 128.543V17.6498C97.0737 15.3093 96.1439 13.0646 94.4889 11.4096C92.8339 9.75464 90.5893 8.82488 88.2488 8.82488H17.6498Z"
+            fill="currentColor"
+          />
+        </svg>
+        <p class="question">Wie hoch hängt der Basketball Korb?</p>
+        <button type="button" class="answer-button">Show Anwser</button>
+        <p class="answer">3.05m</p>
+      </section>
+    </main>
     <footer>
       <a class="active" href="index.html" target="_self">
         <svg
