add accessibility tags

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <title>Quiz App</title>
   </head>
   <body>
     <header>
@@ -12,9 +13,9 @@
     </header>
     <main>
       <section class="question-card">
-        <a href="#" target="_self">
+        <a aria-label="Bookmark" href="#" target="_self">
           <svg
-            alt="Bookmark"
+            aria-hidden="true"
             class="question-bookmark active-bookmark"
             viewBox="0 0 24 24"
             fill="currentColor"
@@ -38,9 +39,9 @@
     </main>
     <footer>
       <nav>
-        <a class="" href="index.html" target="_self">
+        <a aria-label="Link to Home Page" class="" href="index.html" target="_self">
           <svg
-            alt="link to home page"
+            aria-hidden="true"
             class="home-button"
             viewBox="0 0 106 98"
             fill="currentColor"
@@ -60,9 +61,9 @@
             />
           </svg>
         </a>
-        <a class="active" href="bookmarks.html" target="_self">
+        <a aria-label="Link to Bookmarks Page" class="active" href="bookmarks.html" target="_self">
           <svg
-            alt="link to Bookmark page"
+            aria-hidden="true"
             viewBox="0 0 24 24"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
@@ -75,9 +76,9 @@
             />
           </svg>
         </a>
-        <a class="" href="profile.html" target="_self">
+        <a aria-label="Link to Profile Page" class="" href="profile.html" target="_self">
           <svg
-            alt="link to profile page"
+            aria-hidden="true"
             class="profile-button"
             viewBox="0 0 106 106"
             fill="currentColor"
