--- a/pages/bookmarks.html
+++ b/pages/bookmarks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <title>Quiz App</title>
   </head>
   <body>
@@ -29,17 +29,17 @@
             />
           </svg>
         </a>
-        <p class="question">Kann ein Basketball Spiel unentschieden ausgehen?</p>
-        <button type="button" class="answer-button">Show Anwser</button>
-        <p class="answer">Nein</p>
+        <p class="question-card__question">Kann ein Basketball Spiel unentschieden ausgehen?</p>
+        <button type="button" class="question-card__button">Show Anwser</button>
+        <p class="question-card__answer">Nein</p>
         <ul class="question-tags">
-          <li>#Basketball</li>
+          <li class="question-tags__item">#Basketball</li>
         </ul>
       </section>
     </main>
     <footer>
       <nav>
-        <a aria-label="Link to Home Page" class="" href="index.html" target="_self">
+        <a aria-label="Link to Home Page" class="" href="../index.html" target="_self">
           <svg
             aria-hidden="true"
             class="home-button"
@@ -61,7 +61,12 @@
             />
           </svg>
         </a>
-        <a aria-label="Link to Bookmarks Page" class="active" href="bookmarks.html" target="_self">
+        <a
+          aria-label="Link to Bookmarks Page"
+          class="active"
+          href="./bookmarks.html"
+          target="_self"
+        >
           <svg
             aria-hidden="true"
             viewBox="0 0 24 24"
@@ -76,7 +81,7 @@
             />
           </svg>
         </a>
-        <a aria-label="Link to Profile Page" class="" href="profile.html" target="_self">
+        <a aria-label="Link to Profile Page" class="" href="./profile.html" target="_self">
           <svg
             aria-hidden="true"
             class="profile-button"
