--- a/pages/profile.html
+++ b/pages/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/profile.css" />
+    <link rel="stylesheet" href="../css/profile.css" />
     <title>Quiz App</title>
   </head>
   <body>
@@ -67,7 +67,7 @@
     </main>
     <footer>
       <nav>
-        <a aria-label="Link to Home Page" class="" href="index.html" target="_self">
+        <a aria-label="Link to Home Page" class="" href="../index.html" target="_self">
           <svg
             aria-hidden="true"
             class="home-button"
@@ -89,7 +89,7 @@
             />
           </svg>
         </a>
-        <a aria-label="Link to Bookmarks Page" class="" href="bookmarks.html" target="_self">
+        <a aria-label="Link to Bookmarks Page" class="" href="./bookmarks.html" target="_self">
           <svg
             aria-hidden="true"
             viewBox="0 0 24 24"
@@ -104,7 +104,7 @@
             />
           </svg>
         </a>
-        <a aria-label="Link to Profile Page" class="active" href="profile.html" target="_self">
+        <a aria-label="Link to Profile Page" class="active" href="./profile.html" target="_self">
           <svg
             aria-hidden="true"
             class="profile-button"
