change style, check components

--- a/index.html
+++ b/index.html
@@ -135,12 +135,7 @@
             />
           </svg>
         </a>
-        <a
-          aria-label="Link to Bookmarks Page"
-          class=""
-          href="./pages/bookmarks.html"
-          target="_self"
-        >
+        <a aria-label="Link to Bookmarks Page" href="./pages/bookmarks.html" target="_self">
           <svg
             aria-hidden="true"
             viewBox="0 0 24 24"
@@ -155,7 +150,7 @@
             />
           </svg>
         </a>
-        <a aria-label="Link to Profile Page" class="" href="./pages/profile.html" target="_self">
+        <a aria-label="Link to Profile Page" href="./pages/profile.html" target="_self">
           <svg
             aria-hidden="true"
             class="profile-button"
