--- a/pages/profile.html
+++ b/pages/profile.html
@@ -13,7 +13,7 @@
     </header>
     <main>
       <section class="hero">
-        <div class="profile-picture"></div>
+        <img class="profile-picture" src="../assets/profile_picture.jpeg"></img>
         <h2>Snoop Dog</h2>
       </section>
       <section class="about-me">
