--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <script src="./js/index.js" defer></script>
     <title>Quiz App</title>
   </head>
   <body>
@@ -90,7 +91,7 @@
         <a aria-label="Bookmark" href="#" target="_self">
           <svg
             aria-hidden="true"
-            class="question-bookmark"
+            class="question-card__bookmark"
             viewBox="0 0 24 24"
             fill="currentColor"
             xmlns="http://www.w3.org/2000/svg"
