add show anwer function and dark mode

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
         <p class="question-card__question">
           Wie viele Spieler stehen bei einem Basketball Siel pro Team auf dem Feld
         </p>
-        <button type="button" class="question-card__button">Show Anwser</button>
-        <p class="question-card__answer">5</p>
+        <button type="button" class="question-card__button" data-js="show-answer-button">
+          Show Answer
+        </button>
+        <p class="question-card__answer" data-js="answer">5</p>
         <ul class="question-tags">
           <li class="question-tags__item">#Basketball</li>
         </ul>
@@ -57,8 +59,10 @@
           </svg>
         </a>
         <p class="question-card__question">Kann ein Basketball Spiel unentschieden ausgehen?</p>
-        <button type="button" class="question-card__button">Show Anwser</button>
-        <p class="question-card__answer">Nein</p>
+        <button type="button" class="question-card__button" data-js="show-answer-button">
+          Show Answer
+        </button>
+        <p class="question-card__answer" data-js="answer" data-js="answer">Nein</p>
         <ul class="question-tags">
           <li class="question-tags__item">#Basketball</li>
         </ul>
@@ -81,8 +85,10 @@
           </svg>
         </a>
         <p class="question-card__question">Wieviele Punkte gibt ein Freiwurf</p>
-        <button type="button" class="question-card__button">Show Anwser</button>
-        <p class="question-card__answer">1</p>
+        <button type="button" class="question-card__button" data-js="show-answer-button">
+          Show Answer
+        </button>
+        <p class="question-card__answer" data-js="answer">1</p>
         <ul class="question-tags">
           <li class="question-tags__item">#Basketball</li>
         </ul>
@@ -105,8 +111,10 @@
           </svg>
         </a>
         <p class="question-card__question">Wie hoch hängt der Basketball Korb?</p>
-        <button type="button" class="question-card__button">Show Anwser</button>
-        <p class="question-card__answer">3.05m</p>
+        <button type="button" class="question-card__button" data-js="show-answer-button">
+          Show Answer
+        </button>
+        <p class="question-card__answer" data-js="answer">3.05m</p>
         <ul class="question-tags">
           <li class="question-tags__item">#Basketball</li>
         </ul>
