--- a/pages/profile.html
+++ b/pages/profile.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/profile.css" />
-    <script src="../js/index.js" defer></script>
+    <script src="../js/settings.js" defer></script>
 
     <title>Quiz App</title>
   </head>
@@ -61,7 +61,7 @@
         <div class="dark-mode">
           <p>Dark Mode</p>
           <label class="switch">
-            <input type="checkbox" />
+            <input type="checkbox" data-js="dark-mode-switch"/>
             <span class="slider"></span>
           </label>
         </div>
