order files and structure

--- a/pages/bookmarks.html
+++ b/pages/bookmarks.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <h1 class="title">Quiz App</h1>
+      <h1 class="title">Bookmarks</h1>
     </header>
     <main>
       <section class="question-card">
