--- a/pages/profile.html
+++ b/pages/profile.html
@@ -90,7 +90,7 @@
             />
           </svg>
         </a>
-        <a aria-label="Link to New Card Page" class="active" href="./newCard.html" target="_self">
+        <a aria-label="Link to New Card Page" href="./newCard.html" target="_self">
           <svg
             width="114"
             height="151"
