--- a/pages/newCard.html
+++ b/pages/newCard.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/styles.css" />
-    <script src="../js/index.js" defer></script>
+    <script src="../js/form.js" defer></script>
     <title>Quiz App</title>
   </head>
   <body>
@@ -23,16 +23,20 @@
             rows="10"
             maxlength="200"
           ></textarea>
+          <small class="form__character-count">
+            (<span data-js="amountLeft-question"></span> characters left)
+          </small>
           <label for="input-answer">Your answer:</label>
           <textarea name="answer" id="input-answer" cols="60" rows="10" maxlength="200"></textarea>
+          <small class="form__character-count">
+            (<span data-js="amountLeft-answer"></span> characters left)
+          </small>
           <label for="input-tag">Tag:</label>
           <input type="text" name="tag" id="input-tag" />
           <button class="form__button" type="submit">Create new questions</button>
         </form>
       </section>
-      <section class="new-cards">
-        <ul class="card-list" data-js="card-list"></ul>
-      </section>
+      <div class="new-cards" data-js="card-list"></div>
     </main>
     <footer>
       <nav>
