change updateAmount function

--- a/pages/newCard.html
+++ b/pages/newCard.html
@@ -24,12 +24,12 @@
             maxlength="200"
           ></textarea>
           <small class="form__character-count">
-            (<span data-js="amountLeft-question"></span> characters left)
+            (<span data-js="amountLeft-question">200</span> characters left)
           </small>
           <label for="input-answer">Your answer:</label>
           <textarea name="answer" id="input-answer" cols="60" rows="10" maxlength="200"></textarea>
           <small class="form__character-count">
-            (<span data-js="amountLeft-answer"></span> characters left)
+            (<span data-js="amountLeft-answer">200</span> characters left)
           </small>
           <label for="input-tag">Tag:</label>
           <input type="text" name="tag" id="input-tag" />
